test: add coverage reporting